# quicktranslate

./: .gitignore  README.md  flake.nix  pyproject.toml
quicktranslate/: __init__.py  main.py
