[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
authors = [{ name = "Mathieu Moalic", email = "matmoa@amu.edu.pl" }]
name = "quicktranslate"
requires-python = ">=3.8"
dependencies = ["requests==2.32.3", "xdg-base-dirs==6.0.1"]
version = "0.0.2"
readme = "README.md"
description = "A Python script that translates text from the clipboard using Deepl."

[project.scripts]
quicktranslate = "quicktranslate:entrypoint"


[tool.pyright]
reportOptionalMemberAccess = false

[tool.mypy]
strict = true
